--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -1288,7 +1288,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8B-Os-R7F">
-                                <rect key="frame" x="20" y="184" width="335" height="326"/>
+                                <rect key="frame" x="20" y="184" width="335" height="444"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="azt-9V-hMC">
                                         <rect key="frame" x="20" y="33" width="253" height="34"/>
@@ -1326,8 +1326,18 @@
                                                                 <constraint firstAttribute="width" constant="50" id="V3l-9a-V8e"/>
                                                             </constraints>
                                                         </imageView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0fY-CE-MZb">
+                                                            <rect key="frame" x="215" y="11" width="70" height="36"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="70" id="0r9-3d-3nG"/>
+                                                            </constraints>
+                                                            <state key="normal" image="share-purple"/>
+                                                            <connections>
+                                                                <action selector="shareSong:" destination="LPM-jS-59R" eventType="touchUpInside" id="RzO-WG-FvO"/>
+                                                            </connections>
+                                                        </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="BB5-we-7qp">
-                                                            <rect key="frame" x="107" y="10" width="41.666666666666657" height="37.333333333333336"/>
+                                                            <rect key="frame" x="79" y="10" width="41.666666666666657" height="37.333333333333336"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wBa-xg-kxS">
                                                                     <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="20.333333333333332"/>
@@ -1343,20 +1353,16 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0fY-CE-MZb">
-                                                            <rect key="frame" x="210" y="11" width="70" height="35"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <state key="normal" image="share-purple"/>
-                                                            <connections>
-                                                                <action selector="shareSong:" destination="LPM-jS-59R" eventType="touchUpInside" id="RzO-WG-FvO"/>
-                                                            </connections>
-                                                        </button>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="BB5-we-7qp" firstAttribute="top" secondItem="iGV-tY-1JM" secondAttribute="top" constant="10" id="7KP-md-yrI"/>
-                                                        <constraint firstItem="BB5-we-7qp" firstAttribute="leading" secondItem="fcV-IS-lUg" secondAttribute="trailing" constant="42" id="CUO-sJ-ChM"/>
+                                                        <constraint firstItem="BB5-we-7qp" firstAttribute="leading" secondItem="fcV-IS-lUg" secondAttribute="trailing" constant="14" id="CUO-sJ-ChM"/>
                                                         <constraint firstItem="fcV-IS-lUg" firstAttribute="leading" secondItem="iGV-tY-1JM" secondAttribute="leading" constant="15" id="L3B-XS-ja3"/>
                                                         <constraint firstItem="fcV-IS-lUg" firstAttribute="top" secondItem="iGV-tY-1JM" secondAttribute="top" constant="3.5" id="SV0-S4-Nhr"/>
+                                                        <constraint firstItem="0fY-CE-MZb" firstAttribute="centerY" secondItem="fcV-IS-lUg" secondAttribute="centerY" id="cdb-Lb-99d"/>
+                                                        <constraint firstItem="0fY-CE-MZb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="BB5-we-7qp" secondAttribute="trailing" constant="94" id="qSM-t9-P2a"/>
+                                                        <constraint firstAttribute="trailing" secondItem="0fY-CE-MZb" secondAttribute="trailing" constant="10" id="sZs-r0-tLe"/>
+                                                        <constraint firstItem="0fY-CE-MZb" firstAttribute="top" secondItem="iGV-tY-1JM" secondAttribute="topMargin" id="uUR-fb-CUr"/>
                                                         <constraint firstAttribute="bottom" secondItem="fcV-IS-lUg" secondAttribute="bottom" constant="3.5" id="vLL-5q-J7w"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
@@ -1585,29 +1591,28 @@
                                                                 </button>
                                                             </subviews>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="f5W-x9-7zb" userLabel="Label Stack">
-                                                            <rect key="frame" x="14.999999999999996" y="22" width="39.666666666666657" height="41"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGO-uo-oyq">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="39.666666666666664" height="20.333333333333332"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swB-Dq-v9i">
-                                                                    <rect key="frame" x="0.0" y="25.333333333333339" width="39.666666666666664" height="15.666666666666668"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Song" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGO-uo-oyq">
+                                                            <rect key="frame" x="14.999999999999996" y="32.333333333333336" width="39.666666666666657" height="20.333333333333336"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swB-Dq-v9i">
+                                                            <rect key="frame" x="15" y="58.000000000000114" width="33" height="16.666666666666664"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="f5W-x9-7zb" secondAttribute="bottom" constant="22" id="9P1-wn-cy8"/>
-                                                        <constraint firstItem="f5W-x9-7zb" firstAttribute="leading" secondItem="JV1-SG-Wk7" secondAttribute="leading" constant="15" id="9Qo-gb-8ri"/>
+                                                        <constraint firstItem="swB-Dq-v9i" firstAttribute="leading" secondItem="JV1-SG-Wk7" secondAttribute="leadingMargin" id="4m3-cB-Vy3"/>
+                                                        <constraint firstItem="XGO-uo-oyq" firstAttribute="leading" secondItem="JV1-SG-Wk7" secondAttribute="leadingMargin" id="Au5-QF-Mb9"/>
                                                         <constraint firstItem="XxK-WI-Pp9" firstAttribute="centerY" secondItem="JV1-SG-Wk7" secondAttribute="centerY" id="CRR-iV-jhp"/>
-                                                        <constraint firstItem="f5W-x9-7zb" firstAttribute="top" secondItem="JV1-SG-Wk7" secondAttribute="top" constant="22" id="czt-jF-FmH"/>
+                                                        <constraint firstItem="XGO-uo-oyq" firstAttribute="centerY" secondItem="JV1-SG-Wk7" secondAttribute="centerY" id="R9l-Bq-cVI"/>
+                                                        <constraint firstItem="swB-Dq-v9i" firstAttribute="top" secondItem="XGO-uo-oyq" secondAttribute="bottom" constant="5.3333333333334423" id="aHb-KN-VaP"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="swB-Dq-v9i" secondAttribute="bottom" constant="-0.66666666666677088" id="bJF-lX-zhX"/>
+                                                        <constraint firstItem="XxK-WI-Pp9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="swB-Dq-v9i" secondAttribute="trailing" constant="8" symbolic="YES" id="mg6-30-sNS"/>
+                                                        <constraint firstItem="XxK-WI-Pp9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XGO-uo-oyq" secondAttribute="trailing" constant="8" symbolic="YES" id="mzR-AK-iAS"/>
                                                         <constraint firstAttribute="trailingMargin" secondItem="XxK-WI-Pp9" secondAttribute="trailing" constant="5" id="sOz-9P-JLX"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
