--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1680,8 +1680,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="541"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="top" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="AUZ-go-cry">
-                                <rect key="frame" x="16" y="20" width="343" height="520.66666666666663"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AUZ-go-cry">
+                                <rect key="frame" x="16" y="37.000000000000028" width="343" height="505.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Manage Friends" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erH-il-V8v">
                                         <rect key="frame" x="0.0" y="0.0" width="252.33333333333334" height="40.666666666666664"/>
@@ -1689,8 +1689,8 @@
                                         <color key="textColor" red="0.27684453129999997" green="0.32316142320000002" blue="0.45883959530000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8G3-Nw-lKR">
-                                        <rect key="frame" x="0.0" y="68.666666666666686" width="343" height="452.00000000000006"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8G3-Nw-lKR">
+                                        <rect key="frame" x="0.0" y="60.666666666666686" width="343" height="445"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="manageFriendsCell" rowHeight="58" id="vkF-cX-Loe" customClass="ManageFriendsTableViewCell" customModule="ajite" customModuleProvider="target">
@@ -1700,19 +1700,19 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="343" height="58"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture">
                                                             <rect key="frame" x="15" y="4" width="50" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="50" id="A06-Gd-EJF"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5R9-7Z-TgA">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5R9-7Z-TgA">
                                                             <rect key="frame" x="81" y="18.666666666666668" width="41.666666666666657" height="21.000000000000004"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-CC-ssF">
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-CC-ssF">
                                                             <rect key="frame" x="308.33333333333331" y="18" width="19.666666666666686" height="22"/>
                                                             <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <state key="normal" image="minus.circle.fill" catalog="system"/>
@@ -1740,15 +1740,19 @@
                                     </tableView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="8G3-Nw-lKR" firstAttribute="leading" secondItem="AUZ-go-cry" secondAttribute="leading" id="1gC-io-ofN"/>
                                     <constraint firstAttribute="trailing" secondItem="8G3-Nw-lKR" secondAttribute="trailing" id="9aO-42-nDc"/>
+                                    <constraint firstAttribute="trailing" secondItem="8G3-Nw-lKR" secondAttribute="trailing" id="9fz-t5-Ldx"/>
+                                    <constraint firstItem="8G3-Nw-lKR" firstAttribute="top" secondItem="erH-il-V8v" secondAttribute="bottom" constant="20" id="V8w-8E-pkw"/>
+                                    <constraint firstAttribute="bottom" secondItem="8G3-Nw-lKR" secondAttribute="bottom" id="XrH-vh-tzk"/>
+                                    <constraint firstItem="erH-il-V8v" firstAttribute="top" secondItem="AUZ-go-cry" secondAttribute="top" id="b9v-4t-HOm"/>
+                                    <constraint firstItem="erH-il-V8v" firstAttribute="leading" secondItem="AUZ-go-cry" secondAttribute="leading" id="mWS-tN-RK7"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ME9-Ze-8yj" firstAttribute="bottom" secondItem="AUZ-go-cry" secondAttribute="bottom" constant="0.33333333333337123" id="9HG-vb-ufr"/>
                             <constraint firstItem="AUZ-go-cry" firstAttribute="leading" secondItem="tBc-Uh-5cH" secondAttribute="leadingMargin" id="Q3Z-NR-8wr"/>
-                            <constraint firstItem="AUZ-go-cry" firstAttribute="top" secondItem="tBc-Uh-5cH" secondAttribute="top" constant="20" symbolic="YES" id="v0b-li-7Gn"/>
                             <constraint firstItem="AUZ-go-cry" firstAttribute="trailing" secondItem="tBc-Uh-5cH" secondAttribute="trailingMargin" id="xKW-gT-xiN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ME9-Ze-8yj"/>
@@ -1794,7 +1798,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="doy-ol-alg" kind="show" id="N9J-jd-vIH"/>
+                                            <segue destination="doy-ol-alg" kind="presentation" id="N9J-jd-vIH"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="ZPi-fn-fjF" userLabel="Edit Biography">
