--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1333,6 +1333,7 @@
                                                             </constraints>
                                                             <state key="normal" image="share-purple"/>
                                                             <connections>
+                                                                <action selector="pressShare:" destination="YTT-Lv-6TJ" eventType="touchUpInside" id="NVh-Bq-rzh"/>
                                                                 <action selector="shareSong:" destination="LPM-jS-59R" eventType="touchUpInside" id="RzO-WG-FvO"/>
                                                             </connections>
                                                         </button>
@@ -1598,7 +1599,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swB-Dq-v9i">
-                                                            <rect key="frame" x="15" y="58.000000000000114" width="33" height="16.666666666666664"/>
+                                                            <rect key="frame" x="15" y="57.999999999999993" width="33" height="16.666666666666664"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
